<resources>
    <string name="app_name">Find Recipe</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_tarif_bul">TarifBul</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="search">Search</string>
    <string name="person">%s kişi</string>
    <string name="minute">%s dk</string>
    <string name="searchHintHome">Malzeme ile ara</string>
    <string name="searchHintRecipe">Tarif ara</string>
    <string name="emptyTable">MASANIZ BOŞ</string>
    <string name="searhFragmentHint">Tarif ara</string>
    <string name="recipeHowManyPerson">Kaç Kişilik</string>
    <string name="recipePrep">Hazırlama</string>
    <string name="recipeCook">Pişirme</string>
    <string name="recipeBodyIngredients">Malzemeler</string>
    <string name="recipeBodyPrep">Hazırlanış</string>
    <string name="justRecipeExp"><u><b><i>Sadece elinizdeki malzemeleri içeren tarifler</i></b></u></string>
    <string name="maybeRecipeExp"><u><b><i>İçerisinde elinizdeki malzemeler olan tarifler</i></b></u></string>

</resources>
