<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="recipe"
            type="com.gilas.findrecipe.data.Recipe" />
    </data>

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RecipeActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgRecipeActivity"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/back_recipe" />


                <TextView
                    android:id="@+id/titleRecipeActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imgRecipeActivity"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@{recipe.title}"
                    android:textColor="#fff"
                    android:textSize="25sp" />

                <CheckBox
                    android:id="@+id/bkmrkCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/imgRecipeActivity"
                    android:layout_alignBottom="@+id/imgRecipeActivity"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/bkmrk_icon"
                    android:button="@android:color/transparent" />


            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@android:color/white"
                app:cardElevation="2dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingTop="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/recipeHowManyPerson"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/personCountRecipeActivity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="15dp"
                            android:drawableStart="@drawable/ic_group_black_24dp"
                            android:text="@{@string/person(recipe.personCountString)}"
                            android:textSize="14sp"
                            android:textStyle="bold" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/recipePrep"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/prepTimeRecipeActivity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="15dp"
                            android:drawableStart="@drawable/ic_time_icon_24dp"
                            android:gravity="center"
                            android:text="@{@string/minute(recipe.prepTimeMin)}"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/recipeCook"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/cookTimeRecipeActivity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="15dp"
                            android:drawableStart="@drawable/ic_time_icon_24dp"
                            android:gravity="center"
                            android:text="@{@string/minute(recipe.cookTimeMin)}"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="15dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@android:color/white"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/recipeBodyIngredients"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/ingredientRecipeActivity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:textColor="#848484"
                        android:textSize="18sp"
                        android:text="@{recipe.ingredientList}"
                        android:textStyle="italic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/recipeBodyPrep"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/bodyRecipeActivity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:textColor="#848484"
                        android:text="@{recipe.body}"
                        android:textSize="18sp"
                        android:textStyle="italic" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>